--- a/backend/package.json
+++ b/backend/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start:dev": "nodemon ./src/index.ts",
+    "start:dev": "nodemon /src/index.ts",
     "dist": "tsc",
-    "build": "tsx ./src/index.ts",
-    "start": "node ./dist/index.js",
+    "start": "node /dist/index.js",
+    "build": "tsx /src/index.ts",
     "typeorm": "typeorm",
     "typeorm:generate": "typeorm migration:generate",
     "migration:run": "typeorm migration:run",
@@ -18,6 +18,7 @@
   "description": "",
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.10.7",
     "@types/pg": "^8.11.10",
     "nodemon": "^3.1.9",
@@ -26,10 +27,13 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.20",
