--- a/backend/package.json
+++ b/backend/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start:dev": "nodemon src/index.ts",
+    "start": "nodemon src/index.ts",
     "dist": "tsc",
-    "start": "node /dist/index.js",
+    "start:dist": "node /dist/index.js",
     "build": "tsx /src/index.ts",
     "typeorm": "typeorm",
     "typeorm:generate": "typeorm migration:generate",
@@ -21,6 +21,7 @@
     "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.10.7",
     "@types/pg": "^8.11.10",
     "nodemon": "^3.1.9",
@@ -33,10 +34,12 @@
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "1.4.5-lts.1",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.20",
