--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -13,5 +13,5 @@
     "skipLibCheck": true,
     "strictPropertyInitialization": false
   },
-  "include": ["./src/**/*"]
+  "include": ["src/**/*.ts", "src/types/**/*.ts"]
 }
